fix: fixed custom scrollbar`s styles

--- a/src/index.css
+++ b/src/index.css
@@ -77,13 +77,18 @@ body {
 	width: 4px;
 }
 
+.custom-scrollbar__dark::-webkit-scrollbar {
+	width: 4px;
+}
+
 .custom-scrollbar::-webkit-scrollbar-thumb {
 	background-color: #d1d2da;
 	border-radius: 5px;
 }
 
 .custom-scrollbar__dark::-webkit-scrollbar-thumb {
-	background-color: #4d5067;
+	background-color: #393a4b;
+	border-radius: 5px;
 }
 
 .custom-scrollbar::-webkit-scrollbar-track {
@@ -92,7 +97,8 @@ body {
 }
 
 .custom-scrollbar__dark::-webkit-scrollbar-track {
-	background: #5b5e7e;
+	background: #4d5067;
+	border-radius: 5px;
 }
 
 /* TodoList */
